--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SALVA"
+            android:text="SAVE"
             android:textSize="20dp"
             android:layout_marginTop="40dp"
             android:clickable="true"/>
