--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,6 +12,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.selima.stickers.MainActivity">
 
+    <ScrollView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -117,5 +121,5 @@
             android:clickable="true"
             android:id="@+id/saveButton"/>
     </LinearLayout>
-
+</ScrollView>
 </RelativeLayout>
