--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:textSize="18dp"
             android:text=""
+            android:inputType="textCapSentences"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
             android:id="@+id/serverName"/>
